# Popcorn

./: Dockerfile  pyproject.toml
.github/workflows/: publish-container.yml
popcorn/: run_eval.py
popcorn/utils/: constants.py
utils/: constants.py  utils.py
