[tool.poetry]
name = "popcorn"
version = "0.1.0"
description = "🍿POPCORN: High-resolution Population Maps Derived from Sentinel-1 and Sentinel-2 🌍🛰️"
authors = ["Nando Metzger <nando.metzger@geod.baug.ethz.ch>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "2.1.1+cu118", source = "torch" }
torchvision = { version = "0.16.1+cu118", source = "torch" }
pandas = "2.1.3"
tqdm = "4.66.1"
wandb = "0.16.0"
rasterio = "1.3.9"
configargparse = "1.7"
scipy = "1.11.4"
matplotlib = "3.8.2"
fvcore = "0.1.5.post20221221"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
